# Comfy

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt
src/Comfy/: CMakeLists.txt
src/Parser/: CMakeLists.txt
src/Parser/include/Parser/: Token.h  Token.hpp  Tokenizer.h  Tokenizer.hpp  TokenizerExceptions.h
src/Parser/src/: Tokenizer.cpp  TokenizerExceptions.cpp
src/Parser/test/: CMakeLists.txt  Tokenizer.UnitTests.cpp
